--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -11,6 +11,14 @@
         <item name="android:layout_height">@dimen/dashboard_card_height</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:layout_margin">8dp</item>
+        <item name="android:layout_margin">4dp</item>
+        <item name="contentPadding">8dp</item>
+    </style>
+
+    <style name="Theme.Hystime.DashboardCardViewTitle" parent="@style/Widget.MaterialComponents.TextView">
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Subhead</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+
     </style>
 </resources>
