--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -30,4 +30,13 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_gravity">start|bottom</item>
     </style>
+
+    <style name="Theme.Hystime.DashboardCardViewContentUnit" parent="@style/Widget.MaterialComponents.TextView">
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Display1</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:layout_marginHorizontal">2dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_gravity">start|bottom</item>
+    </style>
 </resources>
