--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -41,6 +41,7 @@
                     android:id="@+id/today_focus_length"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="start|bottom"
                     android:inflatedId="@+id/today_focus_length"
                     android:layout="@layout/item_dashboard_hourmin_text" />
 
@@ -72,6 +73,7 @@
 
                 <ViewStub
                     android:id="@+id/total_focus_length"
+                    android:layout_gravity="start|bottom"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:inflatedId="@+id/total_focus_length"
