--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -26,6 +26,7 @@
 
     <style name="Theme.Hystime.DashboardCardViewContentNumber" parent="@style/Widget.MaterialComponents.TextView">
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Display1</item>
+        <item name="android:textSize">28sp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_gravity">start|bottom</item>
@@ -33,10 +34,10 @@
 
     <style name="Theme.Hystime.DashboardCardViewContentUnit" parent="@style/Widget.MaterialComponents.TextView">
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Display1</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:layout_marginHorizontal">2dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_gravity">start|bottom</item>
+        <item name="android:layout_gravity">bottom</item>
     </style>
 </resources>
