feat: implement timepiece in dashboard

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -43,7 +43,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="start|bottom"
                     android:inflatedId="@+id/today_focus_length"
-                    android:layout="@layout/item_dashboard_hourmin_text" />
+                    android:layout="@layout/widget_dashboard_hourmin_text" />
 
             </com.google.android.material.card.MaterialCardView>
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -77,7 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:inflatedId="@+id/total_focus_length"
-                    android:layout="@layout/item_dashboard_hourmin_text" />
+                    android:layout="@layout/widget_dashboard_hourmin_text" />
             </com.google.android.material.card.MaterialCardView>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -99,52 +99,67 @@
                         style="@style/Theme.Hystime.DashboardCardViewTitle"
                         android:text="@string/timepieces" />
 
-                    <androidx.appcompat.widget.LinearLayoutCompat
+                    <FrameLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp">
 
                         <com.google.android.material.textview.MaterialTextView
-                            android:id="@+id/type"
+                            android:id="@+id/placeholder_timepiece"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="end"
-                            android:layout_marginEnd="10dp"
-                            android:text="@string/default_type"
-                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
+                            android:visibility="gone"
+                            android:text="@string/no_timepiece" />
 
-                        <com.google.android.material.textview.MaterialTextView
-                            android:id="@+id/start"
-                            android:layout_width="wrap_content"
+                        <androidx.appcompat.widget.LinearLayoutCompat
+                            android:id="@+id/timepiece"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginEnd="10dp"
-                            android:text="@string/default_time" />
+                            >
+                            <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/type"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="end"
+                                android:layout_marginEnd="10dp"
+                                android:text="@string/default_type"
+                                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
 
-                        <View
-                            android:layout_width="20dp"
-                            android:layout_height="1dp"
-                            android:layout_gravity="center"
-                            android:layout_marginEnd="10dp"
-                            android:background="@android:color/darker_gray" />
+                            <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/start"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginEnd="10dp"
+                                android:text="@string/default_time" />
 
-                        <com.google.android.material.textview.MaterialTextView
-                            android:id="@+id/end"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="10dp"
-                            android:text="@string/default_time" />
+                            <View
+                                android:layout_width="20dp"
+                                android:layout_height="1dp"
+                                android:layout_gravity="center"
+                                android:layout_marginEnd="10dp"
+                                android:background="@android:color/darker_gray" />
 
-                        <com.google.android.material.textview.MaterialTextView
-                            android:id="@+id/duration"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="10dp"
-                            android:text="@string/default_number" />
+                            <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/end"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginEnd="10dp"
+                                android:text="@string/default_time" />
 
-                    </androidx.appcompat.widget.LinearLayoutCompat>
+                            <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/duration"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginEnd="10dp"
+                                android:text="@string/default_number" />
+
+                        </androidx.appcompat.widget.LinearLayoutCompat>
+                    </FrameLayout>
+
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/timepiece_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center|end"
