--- a/app/src/main/res/menu/dashboard_toolbar_menu.xml
+++ b/app/src/main/res/menu/dashboard_toolbar_menu.xml
@@ -4,6 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="AlwaysShowAction">
     <item
+        android:id="@+id/user_info"
+        android:icon="@drawable/ic_history_white_24dp"
+        android:title="@string/user_info"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/refresh"
         android:icon="@drawable/ic_refresh_white_24dp"
         android:title="@string/refresh"
