--- a/app/src/main/res/layout/item_dashboard_timepiece.xml
+++ b/app/src/main/res/layout/item_dashboard_timepiece.xml
@@ -15,7 +15,8 @@
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/start"
@@ -47,13 +48,28 @@
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_gravity="end"
-            android:text="@string/default_type"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="@string/default_type"
+                android:layout_marginEnd="8dp"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/target"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="@string/default_target"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
     </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
