--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -16,6 +16,15 @@
         <item name="contentPadding">12dp</item>
     </style>
 
+    <style name="Theme.Hystime.DashboardWideCardView" parent="@style/Widget.MaterialComponents.CardView">
+        <item name="elevation">2dp</item>
+        <item name="cardCornerRadius">@dimen/dashboard_card_CornerRadius</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_margin">4dp</item>
+        <item name="contentPadding">12dp</item>
+    </style>
+
     <style name="Theme.Hystime.DashboardCardViewTitle" parent="@style/Widget.MaterialComponents.TextView">
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Subhead</item>
         <item name="android:layout_marginBottom">2dp</item>
