feat: update heatmap

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,6 +7,10 @@
         </attr>
     </declare-styleable>
 
+    <declare-styleable name="HeatMapView">
+        <attr name="ceilSize" format="dimension" />
+    </declare-styleable>
+
 
     <declare-styleable name="NumberPickerPreferenceCompat">
         <attr name="minValue" format="integer" />
