feat: support heatmap
Signed-off-by: Zxilly <zhouxinyu1001@gmail.com>

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -191,9 +191,11 @@
                         android:text="@string/heatmap" />
 
                     <HorizontalScrollView
+                        android:id="@+id/scroll"
                         android:layout_marginTop="8dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:scrollbars="none"
                         tools:ignore="SpeakableTextPresentCheck">
 
                         <top.learningman.hystime.view.HeatMapView
