--- a/app/src/main/res/layout/activity_timer_full_screen.xml
+++ b/app/src/main/res/layout/activity_timer_full_screen.xml
@@ -24,6 +24,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
