--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -21,7 +21,8 @@
         app:tabInlineLabel="true"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="?attr/colorPrimary"
-        app:tabTextAppearance="@style/TextAppearance.HysTime.TabLayout" />
+        app:tabTextAppearance="@style/TextAppearance.HysTime.TabLayout"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 
     <top.learningman.hystime.utils.NestedScrollableHost
@@ -73,7 +74,8 @@
             app:iconTint="@color/timing_color"
             app:layout_constraintBottom_toTopOf="@id/ref"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <View
             android:id="@+id/ref"
@@ -88,15 +90,28 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="@dimen/timer_dias" />
 
-
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/buttonGroup"
-            android:layout_width="wrap_content"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="176dp"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_marginTop="@dimen/timer_horizontal_margin_half"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ref" />
+            app:layout_constraintTop_toBottomOf="@+id/ref">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/start"
+                android:text="@string/start"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="12dp"
+                android:textAllCaps="false"
+                android:textSize="16sp"
+                app:cornerRadius="20dp" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
 
     </top.learningman.hystime.utils.NestedScrollableHost>
 
