--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -101,14 +101,15 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/start"
-                android:text="@string/start"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:padding="12dp"
+                android:text="@string/start"
                 android:textAllCaps="false"
                 android:textSize="16sp"
-                app:cornerRadius="20dp" />
+                app:cornerRadius="20dp"
+                tools:ignore="TextContrastCheck" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
