dev: redesign timer
Signed-off-by: Zxilly <zhouxinyu1001@gmail.com>

--- a/app/src/main/res/layout/fragment_normal_timing.xml
+++ b/app/src/main/res/layout/fragment_normal_timing.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.timer.timing.NormalTimerViewFragment">
 
 
-    <top.learningman.hystime.view.TimerView
+    <top.learningman.hystime.ui.timer.TimerView
         android:id="@+id/timer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
