--- a/app/src/main/res/layout/fragment_countdown.xml
+++ b/app/src/main/res/layout/fragment_countdown.xml
@@ -22,6 +22,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/target"
+        android:visibility="gone"
         style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,12 +30,13 @@
         android:textAllCaps="false"
         android:textColor="?android:textColorPrimary"
         android:textSize="20sp"
+        android:clickable="false"
         app:layout_constraintBottom_toTopOf="@id/timer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <top.learningman.hystime.view.TimerView
+    <top.learningman.hystime.ui.timer.TimerView
         android:id="@+id/timer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -48,6 +50,8 @@
         app:type="normal" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/work_running"
+        android:visibility="gone"
         android:layout_width="176dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/timer_horizontal_margin_half"
@@ -57,7 +61,32 @@
         app:layout_constraintTop_toBottomOf="@+id/timer">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/start"
+            android:id="@+id/pause"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="12dp"
+            android:text="@string/pause"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            app:cornerRadius="20dp"
+            tools:ignore="TextContrastCheck" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/work_pause"
+        android:visibility="gone"
+        android:layout_width="176dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/timer_horizontal_margin_half"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timer">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/resume"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -65,26 +94,47 @@
             android:text="@string/start"
             android:textAllCaps="false"
             android:textSize="16sp"
-            app:cornerRadius="20dp" />
-
+            app:cornerRadius="20dp"
+            tools:ignore="TextContrastCheck" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/interrupt"
-            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
-            android:layout_width="wrap_content"
+            android:id="@+id/exit"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/timer_vertical_margin"
+            android:layout_gravity="center"
+            android:padding="12dp"
+            android:text="@string/pause"
             android:textAllCaps="false"
-            android:textColor="?android:textColorPrimary"
-            android:textSize="20sp"
-            app:icon="@drawable/ic_chevron_right_white_24dp"
-            app:iconGravity="end"
-            app:iconPadding="0dp"
-            app:iconTint="@color/timing_color"
-            app:layout_constraintBottom_toTopOf="@id/ref"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="SpeakableTextPresentCheck" />
+            android:textColor="#AB47BC"
+            android:textSize="16sp"
+            app:cornerRadius="20dp" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/break_running"
+        android:visibility="gone"
+        android:layout_width="176dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/timer_horizontal_margin_half"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timer">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/skip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="12dp"
+            android:text="@string/start"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            app:cornerRadius="20dp"
+            app:backgroundTint="@color/relax_color"
+            tools:ignore="TextContrastCheck" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
