--- a/app/src/main/res/layout/fragment_pomodoro_timing.xml
+++ b/app/src/main/res/layout/fragment_pomodoro_timing.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.timer.timing.PomodoroTimerViewFragment">
 
 
-    <top.learningman.hystime.view.TimerView
+    <top.learningman.hystime.ui.timer.TimerView
         android:id="@+id/timer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
