--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -24,6 +24,16 @@
         app:tabTextAppearance="@style/TextAppearance.HysTime.TabLayout"
         tools:ignore="SpeakableTextPresentCheck" />
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="?attr/actionBarSize"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"/>
 
     <top.learningman.hystime.utils.NestedScrollableHost
         android:id="@+id/timerHost"
@@ -93,8 +103,8 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="176dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginTop="@dimen/timer_horizontal_margin_half"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ref">
