--- a/app/src/main/res/layout/fragment_countdown.xml
+++ b/app/src/main/res/layout/fragment_countdown.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.timer.timing.CountdownFragment">
@@ -22,15 +23,15 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/target"
-        android:visibility="gone"
         style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/timer_vertical_margin"
+        android:clickable="false"
         android:textAllCaps="false"
         android:textColor="?android:textColorPrimary"
         android:textSize="20sp"
-        android:clickable="false"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/timer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,11 +52,11 @@
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/work_running"
-        android:visibility="gone"
         android:layout_width="176dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/timer_horizontal_margin_half"
         android:orientation="vertical"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timer">
@@ -76,11 +77,11 @@
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/work_pause"
-        android:visibility="gone"
         android:layout_width="176dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/timer_horizontal_margin_half"
         android:orientation="vertical"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timer">
@@ -114,11 +115,11 @@
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/break_running"
-        android:visibility="gone"
         android:layout_width="176dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/timer_horizontal_margin_half"
         android:orientation="vertical"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timer">
@@ -132,9 +133,23 @@
             android:text="@string/start"
             android:textAllCaps="false"
             android:textSize="16sp"
-            app:cornerRadius="20dp"
             app:backgroundTint="@color/relax_color"
+            app:cornerRadius="20dp"
             tools:ignore="TextContrastCheck" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/exit2"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="12dp"
+            android:text="@string/pause"
+            android:textAllCaps="false"
+            android:textColor="@color/relax_color"
+            android:textSize="16sp"
+            app:cornerRadius="20dp"
+            app:strokeColor="@color/relax_color" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
