--- a/app/src/main/res/layout/fragment_finish.xml
+++ b/app/src/main/res/layout/fragment_finish.xml
@@ -6,14 +6,69 @@
     android:layout_height="match_parent"
     tools:context=".ui.timer.timing.FinishFragment">
 
-    <TextView
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/work_finish_hint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/ref"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/ref"
+        app:layout_constraintLeft_toLeftOf="@+id/ref"
+        app:layout_constraintRight_toRightOf="@+id/ref"
+        app:layout_constraintTop_toTopOf="@+id/ref">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="❤️"
+            android:textColor="#FF5252"
+            android:textSize="80sp"
+            tools:ignore="HardcodedText" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="@string/work_finish_hint"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            android:textFontWeight="700" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/break_finish_hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/ref"
+        app:layout_constraintLeft_toLeftOf="@+id/ref"
+        app:layout_constraintRight_toRightOf="@+id/ref"
+        app:layout_constraintTop_toTopOf="@+id/ref">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="💪"
+            android:textColor="#FF5252"
+            android:textSize="80sp"
+            tools:ignore="HardcodedText" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="@string/break_finish_hint"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            android:textFontWeight="700" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <View
         android:id="@+id/ref"
@@ -31,10 +86,49 @@
         tools:ignore="HardcodedText" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/break_finish"
         android:layout_width="176dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/timer_horizontal_margin_half"
         android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ref">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/start2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="12dp"
+            android:text="@string/break_start"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            app:cornerRadius="20dp"
+            tools:ignore="TextContrastCheck" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/exit2"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="12dp"
+            android:text="@string/exit"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            app:cornerRadius="20dp" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/work_finish"
+        android:layout_width="176dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/timer_horizontal_margin_half"
+        android:orientation="vertical"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ref">
@@ -53,7 +147,7 @@
             tools:ignore="TextContrastCheck" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/interrupt"
+            android:id="@+id/exit"
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
