--- a/app/src/main/res/layout/fragment_finish.xml
+++ b/app/src/main/res/layout/fragment_finish.xml
@@ -147,6 +147,20 @@
             tools:ignore="TextContrastCheck" />
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/skip"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="12dp"
+            android:text="@string/break_skip"
+            android:textAllCaps="false"
+            android:textColor="#2E7D32"
+            android:textSize="16sp"
+            app:cornerRadius="20dp"
+            app:strokeColor="@color/relax_color" />
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/exit"
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="match_parent"
